--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+transformers @ git+https://github.com/huggingface/transformers.git@agents-planning
 beautifulsoup4==4.12.3
 datasets==2.19.2
 easyocr==1.7.1
@@ -19,7 +20,6 @@ python-dotenv==1.0.1
 Requests==2.32.3
 google-search-results==2.4.2
 tqdm==4.66.4
-transformers==4.41.2
 youtube_transcript_api==0.6.2
 python-pptx==0.6.23
 accelerate==0.31.0
